Fully created Menu view

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -35,6 +35,9 @@
       "@screens/*": [
         "screens/*"
       ],
+      "@providers": [
+        "providers/*",
+      ],
     }
   },
   "include": [
