Added button sound effect

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,7 @@
       "@components/*": ["shared/components/*"],
       "@screens/*": ["screens/*"],
       "@providers/*": ["providers/*"],
+      "@hooks/*": ["shared/hooks/*"],
     },
 
     /* Types */
