--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.14",
     "howler": "^2.2.4",
     "path": "^0.12.7",
     "react": "^19.1.0",
